Fri Jun 18 20:08:49 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * README:

          Updated TAO and compiler versions for forthcoming release.

Thu Jun 17 20:09:07 UTC 2010  Scott Harris  <harris_s@ociweb.com>

        * NEWS:

          Added TTL and interupt suppression.

Thu Jun 17 20:05:08 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * ChangeLog:

          Attempted to normalize the formatting and whitespace of the recent
          ChangeLog messages.  Please use cle.pl and zap trailing whitespace.

        * NEWS:

          Formatted the NEWS to look like all the other releases.

Thu Jun 17 19:59:05 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * performance-tests/Bench/src/Process.cpp:

          Extended the sub timeout on waiting for pub termination.

        * NEWS:

          Added changes after last release.

Thu Jun 17 19:50:31 UTC 2010  Don Hudson  <hudsond@ociweb.com>

        * dds/DCPS/transport/framework/TransportReceiveStrategy.h:

          Increased RECEIVED_BUFFERS from 2 to 16 and BUFFER_LOW_WATER from 1500 to 4096.
          This is to better insure that the total available space in the receive buffers
          can hold the max size message (64K).

        * dds/DCPS/transport/framework/TransportReceiveStrategy.cpp:

          Changed receive_bytes error from debug message to warning message because some
          errors may be non-recoverable.

        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Changed OUTCOME_SEND_ERROR from debug message to warning message because some
          errors may be non-recoverable.

        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:

           Removed unused method name parameter from ACE_ERROR usages
           (not needed as method is described in error messages).

        * dds/DCPS/transport/multicast/ReliableSession.cpp:

          Changed send_naks() to do nothing if the session hasn't been acknowledged.
