@@ -1,8 +1,8 @@
-This is OpenDDS version 2.1.2, released Tue Mar 23 19:32:21 UTC 2010.
+This is OpenDDS version 2.1.3, released Fri Jun 18 20:15:06 UTC 2010.
 
 8<----------8<----------8<----------8<----------8<----------8<----------8<----
 
-    OpenDDS VERSION: 2.1.2
+    OpenDDS VERSION: 2.1.3
     TAO VERSION:
 
     HOST MACHINE and OPERATING SYSTEM:
